--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -25,12 +25,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story',  'island']\n",
+    "for word in words:\n",
+    "    New_words = (word.upper())\n",
+    "    print(New_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -41,11 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['filling', 'theatre', 'easygoing', 'story', 'island']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story',  'island']\n",
+    "new_words = []\n",
+    "for word in words:\n",
+    "    if len(word) >= 5:\n",
+    "        new_words.append(word)\n",
+    "print(new_words)"
    ]
   },
   {
@@ -57,11 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story',  'island']\n",
+    "for word in words:\n",
+    "    if word.startswith(\"t\"):\n",
+    "        print(word)\n",
+    "        break"
    ]
   },
   {
@@ -80,11 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "squares = []\n",
+    "for i in range(1, 11):\n",
+    "    squares.append(i**2)\n",
+    "print(squares)"
    ]
   },
   {
@@ -96,11 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "squares = []\n",
+    "for i in range(1, 11):\n",
+    "    if i % 2 != 0:\n",
+    "        squares.append(i**2)\n",
+    "print(squares)"
    ]
   },
   {
@@ -112,11 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 256, 576, 1024, 1600, 2304, 3136, 4096, 5184, 6400, 7744, 9216, 10816, 12544, 14400, 16384, 18496, 20736, 23104, 25600, 28224, 30976, 33856, 36864, 40000, 43264, 46656, 50176, 53824, 57600, 61504, 65536, 69696, 73984, 78400, 82944, 87616, 92416, 97344, 102400, 107584, 112896, 118336, 123904, 129600, 135424, 141376, 147456, 153664, 160000, 166464, 173056, 179776, 186624, 193600, 200704, 207936, 215296, 222784, 230400, 238144, 246016, 254016, 262144, 270400, 278784, 287296, 295936, 304704, 313600, 322624, 331776, 341056, 350464, 360000, 369664, 379456, 389376, 399424, 409600, 419904, 430336, 440896, 451584, 462400, 473344, 484416, 495616, 506944, 518400, 529984, 541696, 553536, 565504, 577600, 589824, 602176, 614656, 627264, 640000, 652864, 665856, 678976, 692224, 705600, 719104, 732736, 746496, 760384, 774400, 788544, 802816, 817216, 831744, 846400, 861184, 876096, 891136, 906304, 921600, 937024, 952576, 968256, 984064]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "numbers = range(1, 1000)\n",
+    "squares = []\n",
+    "for i in numbers:\n",
+    "    if i %8==0:\n",
+    "        squares.append(i**2)\n",
+    "print(squares)\n"
    ]
   },
   {
@@ -170,11 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "num_people = len(people)\n",
+    "print(num_people)"
    ]
   },
   {
@@ -186,11 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "people_with_kids = [person for person in people if person[\"n_kids\"] > 0]\n",
+    "num_people_with_kids = len(people_with_kids)\n",
+    "\n",
+    "print(num_people_with_kids)"
    ]
   },
   {
@@ -202,11 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "total_kids = sum(person[\"n_kids\"] for person in people)\n",
+    "print(total_kids)"
    ]
   },
   {
@@ -218,11 +335,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 2}, {'name': 'Lucía', 'age': 22, 'n_kids': 3}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "people_in_a_year = []\n",
+    "for person in people:\n",
+    "    if person[\"name\"].endswith(\"a\"):\n",
+    "        person[\"n_kids\"] += 1\n",
+    "    people_in_a_year.append(person.copy())\n",
+    "\n",
+    "print(people_in_a_year)"
    ]
   }
  ],
@@ -242,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
